force-app/main/default/objects/FieloSVY__SurveyResponse__c/FieloSVY__SurveyResponse__c.object-meta.xml
<CustomObject>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>