force-app/main/default/objects/FieloSVY__SurveyResponse__c/fields/FieloSVY__EventPollster__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__EventPollster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pollster Event</label>
    <referenceTo>FieloEE__Event__c</referenceTo>
    <relationshipLabel>Survey Responses (Pollster Event)</relationshipLabel>
    <relationshipName>Survey_Responses_Pollster</relationshipName>
    <type>Lookup</type>
</CustomField>