force-app/main/default/objects/FieloSVY__SurveyResponse__c/fields/FieloSVY__Pollster__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Pollster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pollster</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Survey Responses (Pollster)</relationshipLabel>
    <relationshipName>Survey_Responses1</relationshipName>
    <type>Lookup</type>
</CustomField>