force-app/main/default/objects/FieloSVY__SurveyResponse__c/fields/FieloSVY__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>FieloEE__Transaction__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>