force-app/main/default/objects/FieloSVY__SurveyResponse__c/fields/FieloSVY__TransactionPollster__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__TransactionPollster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pollster Transaction</label>
    <referenceTo>FieloEE__Transaction__c</referenceTo>
    <relationshipLabel>Survey Responses (Pollster Transaction)</relationshipLabel>
    <relationshipName>Survey_Responses_Pollster</relationshipName>
    <type>Lookup</type>
</CustomField>