force-app/main/default/objects/FieloSVY__SurveyResponse__c/fields/FieloSVY__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>